unpackaged/main/default/objects/FS_Affiliation__c/FS_Affiliation__c.object-meta.xml
<CustomObject>
    <description>An Affiliation links Accounts and Contacts. It defines relationships between companies and employees, relationships amongst employees etc</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>Affiliation {0000000}</displayFormat>
        <label>Affiliation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>