unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Bar_Directory_Role__c.field-meta.xml
<CustomField>
    <fullName>FS_Bar_Directory_Role__c</fullName>
    <label>Bar Directory Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>President-Elect</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Bar Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>