unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Child_Account__c.field-meta.xml
<CustomField>
    <fullName>FS_Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations (Child Account)</relationshipLabel>
    <relationshipName>Child_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>