unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Child_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Child_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact affiliated to the company account</inlineHelpText>
    <label>Child Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parent Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>