unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Child_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Child_Contact_Name__c</fullName>
    <formula>FS_Child_Contact__r.FirstName + " " +  FS_Child_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Contact Name</label>
    <type>Text</type>
</CustomField>