unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_End_Date__c</fullName>
    <inlineHelpText>End Date of Affiliation</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>