unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Firm_Bill__c.field-meta.xml
<CustomField>
    <fullName>FS_Firm_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the contact's dues will be paid by their company/firm</inlineHelpText>
    <label>Firm Bill</label>
    <type>Checkbox</type>
</CustomField>