unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Link_of_Parent_s_Roster__c.field-meta.xml
<CustomField>
    <fullName>FS_Link_of_Parent_s_Roster__c</fullName>
    <formula>HYPERLINK( $Label.FS_Roster_Community_Site + "/s/affiliations?parentId=" +  FS_Parent_Account__r.Id, IF( FS_Organization_Manager__c , "View/Manage", "View"), "_blank")</formula>
    <label>Link of Parent's Roster</label>
    <type>Text</type>
</CustomField>