unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Organization_Manager__c.field-meta.xml
<CustomField>
    <fullName>FS_Organization_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organization Manager</label>
    <type>Checkbox</type>
</CustomField>