unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Reason__c</fullName>
    <inlineHelpText>if Other, specify reason for removal of affiliation</inlineHelpText>
    <label>Other Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>