unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Company Account affiliated to the contact</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>