unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Account_Name__c</fullName>
    <formula>FS_Parent_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Name</label>
    <type>Text</type>
</CustomField>