unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Parent_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliations (Parent Contact)</relationshipLabel>
    <relationshipName>Child_Contact_Affilations</relationshipName>
    <type>Lookup</type>
</CustomField>