unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Parent_Organization_Category__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Organization_Category__c</fullName>
    <label>Parent Organization Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Business/Corporation (In-House)</fullName>
            </value>
            <value>
                <fullName>Court System</fullName>
            </value>
            <value>
                <fullName>Law Firm/Private Practice</fullName>
            </value>
            <value>
                <fullName>Educational Institution</fullName>
            </value>
            <value>
                <fullName>Non-Profit/Public Interest</fullName>
            </value>
            <value>
                <fullName>Miscellaneous/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>