unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Primary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>FS_Primary_Affiliation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primary affiliation of the contact</inlineHelpText>
    <label>Primary Affiliation</label>
    <type>Checkbox</type>
</CustomField>