unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>FS_PrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primary contact of the firm/company</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>