unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Reference__c.field-meta.xml
<CustomField>
    <fullName>FS_Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>