unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Removal_Date__c</fullName>
    <inlineHelpText>Removal date of affiliation between account and contact</inlineHelpText>
    <label>Removal Date</label>
    <type>Date</type>
</CustomField>