unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Start Date of affiliation</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>