unpackaged/main/default/objects/FS_Affiliation__c/fields/FS_Status_FF__c.field-meta.xml
<CustomField>
    <fullName>FS_Status_FF__c</fullName>
    <formula>IF(AND (TODAY() &gt; FS_Start_Date__c, TODAY() &lt;  FS_End_Date__c) ,'Active' , 'Expired')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliation Status</label>
    <type>Text</type>
</CustomField>