unpackaged/main/default/objects/FS_Affiliation__c/fields/Removal_reason__c.field-meta.xml
<CustomField>
    <fullName>Removal_reason__c</fullName>
    <inlineHelpText>Removal Reason of affiliation</inlineHelpText>
    <label>Removal reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>No longer with the firm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>