unpackaged/main/default/objects/FS_Affiliation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Role of the contact at the parent company</inlineHelpText>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>FS_Parent_Organization_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjunct Professor</fullName>
            </value>
            <value>
                <fullName>Administrative Law Judge/Hearing Officer</fullName>
            </value>
            <value>
                <fullName>Administrator/Administrative Staff</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Attorney General</fullName>
            </value>
            <value>
                <fullName>Bar Executive</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Career services contact</fullName>
            </value>
            <value>
                <fullName>Chief Legal Officer</fullName>
            </value>
            <value>
                <fullName>City Corporation Counsel</fullName>
            </value>
            <value>
                <fullName>Company Manager</fullName>
            </value>
            <value>
                <fullName>Court Attorney</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>District Attorney/Prosecutor</fullName>
            </value>
            <value>
                <fullName>Diversity Coordinator</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>Financial Officer</fullName>
            </value>
            <value>
                <fullName>General Counsel</fullName>
            </value>
            <value>
                <fullName>Independent Contractor</fullName>
            </value>
            <value>
                <fullName>In-House Counsel</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Law Clerk</fullName>
            </value>
            <value>
                <fullName>Law Librarian</fullName>
            </value>
            <value>
                <fullName>Law library contact</fullName>
            </value>
            <value>
                <fullName>Librarian</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Lobbyist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>