unpackaged/main/default/objects/FS_Affiliation__c/recordTypes/FS_Individual_to_Individual.recordType-meta.xml
<RecordType>
    <fullName>FS_Individual_to_Individual</fullName>
    <active>true</active>
    <label>Individual to Individual</label>
</RecordType>