unpackaged/main/default/objects/FS_Affiliation__c/recordTypes/FS_Organization_to_Individual.recordType-meta.xml
<RecordType>
    <fullName>FS_Organization_to_Individual</fullName>
    <active>true</active>
    <label>Organization to Individual</label>
</RecordType>