unpackaged/main/default/objects/FS_Affiliation__c/recordTypes/FS_Organization_to_Organization.recordType-meta.xml
<RecordType>
    <fullName>FS_Organization_to_Organization</fullName>
    <active>true</active>
    <label>Organization to Organization</label>
</RecordType>