unpackaged/main/default/objects/FS_Affiliation__c/validationRules/FS_InvalidChildContactOrParentAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_InvalidChildContactOrParentAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND($RecordType.Name = "Organization to Individual",  
OR(ISBLANK(FS_Child_Contact__c),ISBLANK(FS_Parent_Account__c)))</errorConditionFormula>
    <errorMessage>Parent Account and Child Contact Can not be blank</errorMessage>
</ValidationRule>