unpackaged/main/default/objects/FS_Affiliation__c/validationRules/FS_PrimaryAffiliationForInActiveRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_PrimaryAffiliationForInActiveRecord</fullName>
    <active>true</active>
    <description>Primary affiliation can be checked for active affiliation record only</description>
    <errorConditionFormula>AND (
ISPICKVAL( FS_Status__c , "InActive"),
FS_Primary_Affiliation__c = true
)</errorConditionFormula>
    <errorMessage>Status field has to be active to set primary affiliation flag.</errorMessage>
</ValidationRule>