unpackaged/main/default/objects/FS_Affiliation__c/validationRules/FS_Status_Cant_Be_Active_after_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Status_Cant_Be_Active_after_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>FS_End_Date__c  &lt;  TODAY()  &amp;&amp;  ISPICKVAL( FS_Status__c , "Active")</errorConditionFormula>
    <errorDisplayField>FS_Status__c</errorDisplayField>
    <errorMessage>Status cannot be saved as Active if End Date is in the past</errorMessage>
</ValidationRule>